force-app/main/default/objects/Support_Manager__c/Support_Manager__c.object-meta.xml
<CustomObject>
    <label>Support Manager</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Support Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>