force-app/main/default/objects/Support_Manager__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queue</label>
    <referenceTo>LocationWaitlist</referenceTo>
    <relationshipLabel>Support Managers</relationshipLabel>
    <relationshipName>Support_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>