force-app/main/default/objects/Support_Manager__c/fields/Queue_Manager__c.field-meta.xml
<CustomField>
    <fullName>Queue_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queue Manager</label>
    <referenceTo>Queue_Manager__c</referenceTo>
    <relationshipLabel>Support Managers</relationshipLabel>
    <relationshipName>Support_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>