force-app/main/default/objects/Support_Manager__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Support Managers</relationshipLabel>
    <relationshipName>Support_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>